ignores css min files, fixes images overlap

--- a/styles/shared-components/asset/_asset.scss
+++ b/styles/shared-components/asset/_asset.scss
@@ -49,5 +49,19 @@
 }
 
 .asset-alt {
-    margin: 1.6rem 0 0;
+    border: 0;
+    border-radius: 0;
+    display: block;
+    height: auto;
+
+    img {
+        width: 100%;
+    }
+
+    // margin: 1.6rem 0 0;
+    // align-items: center;
+    // display: flex;
+    // height: 140px;
+    // justify-content: center; //Min height doesnt work in IE11, has to have a height set to align-items in flex
+    //     margin: $space-stack;
 }
